Updates for card lit element

--- a/src/app/components/dashboard/products/card/card.component.html
+++ b/src/app/components/dashboard/products/card/card.component.html
@@ -2,14 +2,14 @@
     <foodie-card class="class-wrapper" tabindex="0">
       <foodie-img [src]="product.imageUrl" alt="card image"></foodie-img>
       <div class="info">
-        <h1>{{ product.heading }}</h1>
+        <foodie-card-header>{{ product.heading }}</foodie-card-header>
         <p>
           {{ product.description }}
         </p>
       </div>
-      <div class="btn-wrapper">
+      <foodie-card-footer class="btn-wrapper">
         <foodie-button  title="{{'card.update-button' | translate}}" (click)="edit(product.id)" aria-label="Edit"></foodie-button >
         <foodie-button  title="{{'card.delete-button' | translate}}" (click)="deleteProduct(product.id)" aria-label="Delete"></foodie-button>
-      </div>
+      </foodie-card-footer>
   </foodie-card>
 </div>
