--- a/src/app/components/dashboard/products/card/card.component.html
+++ b/src/app/components/dashboard/products/card/card.component.html
@@ -8,7 +8,7 @@
         </p>
       </div>
       <foodie-card-footer class="btn-wrapper">
-        <foodie-button  title="{{'card.update-button' | translate}}" (click)="edit(product.id)" aria-label="Edit"></foodie-button >
+        <foodie-button  title="{{'card.edit-button' | translate}}" (click)="edit(product.id)" aria-label="Edit"></foodie-button >
         <foodie-button  title="{{'card.delete-button' | translate}}" (click)="deleteProduct(product.id)" aria-label="Delete"></foodie-button>
       </foodie-card-footer>
   </foodie-card>
