--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -10,7 +10,7 @@
     padding: 2em 1.5em;
     font-size: 1.40rem;
     border-radius: 4px;
-    background: #4f7588;
+    border: 4px solid #4f7588;
 
     .top-space{
       margin: 15px 0px;
@@ -26,7 +26,7 @@
       font-weight: normal;
       text-align: center;
       text-transform: uppercase;
-      color: #fff;
+      color: #4f7588;
       .container {
         background: #ebebeb;
         padding: 12px;
@@ -35,7 +35,7 @@
     .register-link{
       float:right;
       a{
-        color:#fff;
+        color: #4f7588;
       }
     }
 
@@ -82,8 +82,8 @@
       font-size: 12px;
     }
 
-    .has-error input[type="email"],
-    .has-error input[type="password"] {
+    .has-error foodie-input[type="email"],
+    .has-error foodie-input[type="password"] {
         border:2px solid rgb(216, 12, 12);
         color: rgb(230, 14, 14);
     }
