Updates for testing

--- a/src/app/components/dashboard/products/add-product/add-product.component.html
+++ b/src/app/components/dashboard/products/add-product/add-product.component.html
@@ -1,7 +1,7 @@
-<div id="addProduct" class="modal-wrapper" tabindex="0">
+<div class="modal-wrapper" role="dialog">
   <div class="modal-body">
     <header class="heading">
-      <h1>{{'product-operations.add-product-text' | translate}}</h1>
+      <h1 id="addProduct" tabindex="0">{{'product-operations.add-product-text' | translate}}</h1>
     </header>
     <form [formGroup]="addProductForm">
       <div class="input-wrapper">
