--- a/src/app/components/dashboard/products/edit-products/edit-products.component.html
+++ b/src/app/components/dashboard/products/edit-products/edit-products.component.html
@@ -1,7 +1,7 @@
-<div class="modal-wrapper">
+<div class="modal-wrapper" role="dialog">
   <div class="modal-body">
     <header class="heading">
-        <h1>{{'product-operations.edit-product-text' | translate}}</h1>
+        <h1 id="editProduct" tabindex="0">{{'product-operations.edit-product-text' | translate}}</h1>
     </header>
     <form [formGroup]="editProductForm">
       <div class="input-wrapper">
