--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -38,7 +38,7 @@
             </div>
           </div>
           <div class="btn-box">
-            <button class="btn" aria-label="Register" (click)="onSubmit()">{{'auth.register-tab' | translate}}</button>
+            <button class="btn" aria-label="Submit" (click)="onSubmit()">{{'auth.submit-button' | translate}}</button>
             <div class="btn">
               <a routerLink="/login" class="btn-link" aria-label="Cancel" role="button">{{'product-operations.cancel-button' | translate}}</a>
             </div>
